--- a/app/src/main/res/layout/content_menu_coffee.xml
+++ b/app/src/main/res/layout/content_menu_coffee.xml
@@ -36,7 +36,8 @@
             android:layout_below="@+id/coffees_menu_text"
             android:layout_marginTop="30dp"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/cappuccino_coffee_button"
@@ -49,7 +50,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/caramel_macchiato_coffee_button"
@@ -62,7 +64,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/mocha_coffee_button"
@@ -75,7 +78,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/white_mocha_coffee_button"
@@ -88,7 +92,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/black_white_mocha_coffee_button"
@@ -101,7 +106,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/coffee_button"
@@ -114,7 +120,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <Button
             android:id="@+id/vietnamese_coffee_button"
@@ -127,7 +134,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lover_coffee_button"
             android:layout_width="match_parent"
@@ -139,7 +147,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/expresso_coffee_button"
             android:layout_width="match_parent"
@@ -151,7 +160,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/con_panna_coffee_button"
             android:layout_width="match_parent"
@@ -163,7 +173,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/americano_coffee_button"
             android:layout_width="match_parent"
@@ -175,7 +186,8 @@
             android:paddingRight="10dp"
             android:layout_gravity="start"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
 
         <TextView
             android:id="@+id/latte_prices"
