--- a/app/src/main/res/layout/content_menu_smoothie.xml
+++ b/app/src/main/res/layout/content_menu_smoothie.xml
@@ -56,7 +56,8 @@
             android:layout_below="@+id/small_large_prices_smoothies_text"
             android:textSize="20sp"
             android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/banana_smoothie_button"
             android:background="@color/colorBasic"
@@ -67,7 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/almond_smoothie_button"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/blueberry_smoothie_button"
             android:background="@color/colorBasic"
@@ -78,7 +80,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/banana_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/chocolate_smoothie_button"
             android:background="@color/colorBasic"
@@ -89,7 +92,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/blueberry_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/coconut_smoothie_button"
             android:background="@color/colorBasic"
@@ -100,7 +104,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/chocolate_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/green_tea_smoothie_button"
             android:background="@color/colorBasic"
@@ -111,7 +116,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/coconut_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/honeydew_smoothie_button"
             android:background="@color/colorBasic"
@@ -122,7 +128,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/green_tea_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/jasmine_smoothie_button"
             android:background="@color/colorBasic"
@@ -133,7 +140,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/honeydew_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/mango_smoothie_button"
             android:background="@color/colorBasic"
@@ -144,7 +152,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/jasmine_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/milk_tea_smoothie_button"
             android:background="@color/colorBasic"
@@ -155,7 +164,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/mango_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/papaya_smoothie_button"
             android:background="@color/colorBasic"
@@ -166,7 +176,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/milk_tea_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/red_bean_smoothie_button"
             android:background="@color/colorBasic"
@@ -177,7 +188,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/papaya_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/strawberry_smoothie_button"
             android:background="@color/colorBasic"
@@ -188,7 +200,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/red_bean_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/taro_smoothie_button"
             android:background="@color/colorBasic"
@@ -199,7 +212,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/strawberry_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/thai_smoothie_button"
             android:background="@color/colorBasic"
@@ -210,7 +224,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/taro_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/watermelon_smoothie_button"
             android:background="@color/colorBasic"
@@ -221,7 +236,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/thai_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/kiwi_smoothie_button"
             android:background="@color/colorBasic"
@@ -232,7 +248,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/watermelon_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/acai_smoothie_button"
             android:background="@color/colorBasic"
@@ -243,7 +260,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/kiwi_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/cherry_smoothie_button"
             android:background="@color/colorBasic"
@@ -254,7 +272,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/acai_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/green_apple_smoothie_button"
             android:background="@color/colorBasic"
@@ -265,7 +284,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/cherry_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/guava_smoothie_button"
             android:background="@color/colorBasic"
@@ -276,7 +296,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/green_apple_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/kumquat_smoothie_button"
             android:background="@color/colorBasic"
@@ -287,7 +308,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/guava_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pina_colada_smoothie_button"
             android:background="@color/colorBasic"
@@ -298,7 +320,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/kumquat_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/margarita_smoothie_button"
             android:background="@color/colorBasic"
@@ -309,7 +332,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pina_colada_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lemon_smoothie_button"
             android:background="@color/colorBasic"
@@ -320,7 +344,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/margarita_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lychee_smoothie_button"
             android:background="@color/colorBasic"
@@ -331,7 +356,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/lemon_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/mint_smoothie_button"
             android:background="@color/colorBasic"
@@ -342,7 +368,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/lychee_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/orange_smoothie_button"
             android:background="@color/colorBasic"
@@ -353,7 +380,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/mint_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/passionfruit_smoothie_button"
             android:background="@color/colorBasic"
@@ -364,7 +392,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/orange_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/peach_smoothie_button"
             android:background="@color/colorBasic"
@@ -375,7 +404,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/passionfruit_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pomegranate_smoothie_button"
             android:background="@color/colorBasic"
@@ -386,7 +416,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/peach_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pineapple_smoothie_button"
             android:background="@color/colorBasic"
@@ -397,7 +428,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pomegranate_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/yogurt_smoothie_button"
             android:background="@color/colorBasic"
@@ -408,7 +440,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pineapple_smoothie_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
 
     </android.widget.RelativeLayout>
 </ScrollView>
