--- a/app/src/main/res/layout/content_menu_milkshake.xml
+++ b/app/src/main/res/layout/content_menu_milkshake.xml
@@ -54,7 +54,8 @@
             android:layout_below="@id/small_large_prices_milkshake_text"
             android:textSize="20sp"
             android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/banana_milkshake_button"
             android:background="@color/colorBasic"
@@ -65,7 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/almond_milkshake_button"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/blueberry_milkshake_button"
             android:background="@color/colorBasic"
@@ -76,7 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/banana_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/chocolate_milkshake_button"
             android:background="@color/colorBasic"
@@ -87,7 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/blueberry_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/coconut_milkshake_button"
             android:background="@color/colorBasic"
@@ -98,7 +102,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/chocolate_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/green_tea_milkshake_button"
             android:background="@color/colorBasic"
@@ -109,7 +114,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/coconut_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/honeydew_milkshake_button"
             android:background="@color/colorBasic"
@@ -120,7 +126,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/green_tea_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/jasmine_milkshake_button"
             android:background="@color/colorBasic"
@@ -131,7 +138,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/honeydew_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/mango_milkshake_button"
             android:background="@color/colorBasic"
@@ -142,7 +150,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/jasmine_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/milk_tea_milkshake_button"
             android:background="@color/colorBasic"
@@ -153,7 +162,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/mango_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/papaya_milkshake_button"
             android:background="@color/colorBasic"
@@ -164,7 +174,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/milk_tea_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/red_bean_milkshake_button"
             android:background="@color/colorBasic"
@@ -175,7 +186,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/papaya_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/strawberry_milkshake_button"
             android:background="@color/colorBasic"
@@ -186,7 +198,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/red_bean_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/taro_milkshake_button"
             android:background="@color/colorBasic"
@@ -197,7 +210,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/strawberry_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/thai_milkshake_button"
             android:background="@color/colorBasic"
@@ -208,7 +222,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/taro_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/watermelon_milkshake_button"
             android:background="@color/colorBasic"
@@ -219,7 +234,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/thai_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/kiwi_milkshake_button"
             android:background="@color/colorBasic"
@@ -230,7 +246,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/watermelon_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/acai_milkshake_button"
             android:background="@color/colorBasic"
@@ -241,7 +258,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/kiwi_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/cherry_milkshake_button"
             android:background="@color/colorBasic"
@@ -252,7 +270,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/acai_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/green_apple_milkshake_button"
             android:background="@color/colorBasic"
@@ -263,7 +282,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/cherry_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/guava_milkshake_button"
             android:background="@color/colorBasic"
@@ -274,7 +294,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/green_apple_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/kumquat_milkshake_button"
             android:background="@color/colorBasic"
@@ -285,7 +306,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/guava_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pina_colada_milkshake_button"
             android:background="@color/colorBasic"
@@ -296,7 +318,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/kumquat_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/margarita_milkshake_button"
             android:background="@color/colorBasic"
@@ -307,7 +330,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pina_colada_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lemon_milkshake_button"
             android:background="@color/colorBasic"
@@ -318,7 +342,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/margarita_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/lychee_milkshake_button"
             android:background="@color/colorBasic"
@@ -329,7 +354,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/lemon_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/mint_milkshake_button"
             android:background="@color/colorBasic"
@@ -340,7 +366,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/lychee_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/orange_milkshake_button"
             android:background="@color/colorBasic"
@@ -351,7 +378,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/mint_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/passionfruit_milkshake_button"
             android:background="@color/colorBasic"
@@ -362,7 +390,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/orange_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/peach_milkshake_button"
             android:background="@color/colorBasic"
@@ -373,7 +402,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/passionfruit_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pomegranate_milkshake_button"
             android:background="@color/colorBasic"
@@ -384,7 +414,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/peach_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/pineapple_milkshake_button"
             android:background="@color/colorBasic"
@@ -395,7 +426,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pomegranate_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
         <Button
             android:id="@+id/yogurt_milkshake_button"
             android:background="@color/colorBasic"
@@ -406,7 +438,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@+id/pineapple_milkshake_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:stateListAnimator="@null"/>
 
     </android.widget.RelativeLayout>
 </ScrollView>
